--- a/doctor_list_new.html
+++ b/doctor_list_new.html
@@ -160,7 +160,7 @@
             if (doctor_name_f.trim() == "" || doctor_phone_f.trim() == "") {
                 alert("กรุณากรอกข้อมูลให้ถูกต้อง");
             } else {
-                const apiUrl = (edit_type_f=="new")?'https://back-end-lab-gamma.vercel.app/addDoctor':"https://back-end-lab-gamma.vercel.app//editDoctor";
+                const apiUrl = (edit_type_f=="new")?'https://back-end-lab-gamma.vercel.app/addDoctor':"https://back-end-lab-gamma.vercel.app/editDoctor";
                 
                 const data = {
                     doctor_id:doctor_ID_f,
