--- a/doctor_list_new.html
+++ b/doctor_list_new.html
@@ -128,7 +128,7 @@
             document.getElementById('FormModalLabel').innerHTML = "แก้ไขข้อมูลแพทย์";
             document.getElementById('edit_type').value="update";
             document.getElementById('form_docter_id').style.display = "block";
-            fetch('http://localhost:3000/getDoctor/'+id)
+            fetch('https://back-end-lab-gamma.vercel.app/getDoctor/'+id)
                 .then(response => {
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
